# pickle-bot

./: Dockerfile  Makefile  README.md  pyproject.toml
.helix/: languages.toml
pickle_bot/: bot.py  config.py  matches.py
